--- a/style2.0.css
+++ b/style2.0.css
@@ -5,7 +5,9 @@
     }
     
     /* Set height of the grid so .sidenav can be 100% (adjust as needed) */
-    .row.content {height: 450px}
+    .row.content {
+	    height: 450px
+	}
     
     /* Set gray background color and 100% height */
     .sidenav {
@@ -33,7 +35,7 @@ these make the slideshow work
 	left: 0px;
 	top: 0px;
 	width: 100%;
-	height: 100%;
+	height: 400px;
 	opacity: 0;
 	z-index: 1;
 
