--- a/style2.0.css
+++ b/style2.0.css
@@ -26,7 +26,7 @@ img{
 }
 #slides{
 	position: relative;
-	height: auto;
+	height: 200;
 	width: auto;
 	padding: 0px;
 	margin: 0px;
@@ -38,7 +38,7 @@ img{
 	left: 0px;
 	top: 0px;
 	width: 100%;
-	height: 300px;
+	height: 200px;
 	opacity: 0;
 	z-index: 1;
 
@@ -98,5 +98,6 @@ just for appearance; change whatever you want
         height: auto;
         padding: 15px;
       }
-      .row.content {height:auto;} 
+      .row.content {
+	      height:300;} 
     }
