--- a/style2.0.css
+++ b/style2.0.css
@@ -12,7 +12,8 @@
     /* Set gray background color and 100% height */
     .sidenav {
       padding-top: 20px;
-      background-color: #f1f1f1;
+/*       background-color: #f1f1f1; */
+background-color: "yellow";
       height: 100%;
     }
 /*slide show CSS*/
