--- a/style2.0.css
+++ b/style2.0.css
@@ -13,7 +13,7 @@
     .sidenav {
       padding-top: 20px;
 /*       background-color: #f1f1f1; */
-background-color: "yellow";
+      background-color: #ffff00;
       height: 100%;
     }
 /*slide show CSS*/
