--- a/style2.0.css
+++ b/style2.0.css
@@ -28,10 +28,17 @@ img{
 #slides{
 	position: relative;
 	height: 200;
-	width: auto;
+	width: 100%;
 	padding: 0px;
 	margin: 0px;
 	list-style-type: none;
+}
+
+.center {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	width: 50%;
 }
 
 .slide{
@@ -39,7 +46,7 @@ img{
 	left: 0px;
 	top: 0px;
 	width: 100%;
-	height: 200px;
+	height: 220px;
 	opacity: 0;
 	z-index: 1;
 
@@ -64,7 +71,11 @@ just for appearance; change whatever you want
 .slide{
 	font-size: 40px;
 	padding: 10px;
-	box-sizing: border-box;
+	width: 50%;
+	margin-left: 25%;
+	margin-right: auto;
+	display: block;
+	/* box-sizing: border-box; */
 	background: #333;
 	color: #fff;
 }
